--- a/package.json
+++ b/package.json
@@ -24,5 +24,20 @@
     "eslint-plugin-prettier": "^5.0.1",
     "eslint-plugin-react": "^7.33.2",
     "prettier": "^3.1.0"
-  }
+  },
+  "name": "school-mangement-system",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "start": "nodemon app.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "keywords": [
+    "node.js",
+    "api",
+    "mongodb"
+  ],
+  "author": "Ahmed Sayed",
+  "license": "ISC",
+  "description": ""
 }
