--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "hpp": "^0.2.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
+    "nodemailer": "^6.9.7",
     "validator": "^13.11.0",
     "xss-clean": "^0.1.4"
   },
