--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "express-rate-limit": "^7.1.4",
     "helmet": "^7.1.0",
     "hpp": "^0.2.3",
+    "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
     "nodemailer": "^6.9.7",
